crates/openracing-fmea/tests/snapshots/snapshot_expansion_tests__fault_type_encoder_nan.snap
---
source: crates/openracing-fmea/tests/snapshot_expansion_tests.rs
expression: "format!(\"{}\", FaultType::EncoderNaN)"
---
Encoder returned invalid data
