crates/openracing-fmea/tests/snapshots/snapshot_expansion_tests__fault_type_hands_off.snap
---
source: crates/openracing-fmea/tests/snapshot_expansion_tests.rs
expression: "format!(\"{}\", FaultType::HandsOffTimeout)"
---
Hands-off timeout exceeded
