crates/openracing-fmea/tests/snapshots/snapshot_expansion_tests__fault_type_pipeline_fault.snap
---
source: crates/openracing-fmea/tests/snapshot_expansion_tests.rs
expression: "format!(\"{}\", FaultType::PipelineFault)"
---
Filter pipeline processing fault
