crates/openracing-fmea/tests/snapshots/snapshot_expansion_tests__fault_type_plugin_overrun.snap
---
source: crates/openracing-fmea/tests/snapshot_expansion_tests.rs
expression: "format!(\"{}\", FaultType::PluginOverrun)"
---
Plugin exceeded timing budget
