crates/openracing-fmea/tests/snapshots/snapshot_expansion_tests__fault_type_safety_interlock.snap
---
source: crates/openracing-fmea/tests/snapshot_expansion_tests.rs
expression: "format!(\"{}\", FaultType::SafetyInterlockViolation)"
---
Safety interlock violation
