crates/openracing-fmea/tests/snapshots/snapshot_expansion_tests__fault_type_thermal_limit.snap
---
source: crates/openracing-fmea/tests/snapshot_expansion_tests.rs
expression: "format!(\"{}\", FaultType::ThermalLimit)"
---
Thermal protection triggered
