crates/openracing-fmea/tests/snapshots/snapshot_expansion_tests__fault_type_timing_violation.snap
---
source: crates/openracing-fmea/tests/snapshot_expansion_tests.rs
expression: "format!(\"{}\", FaultType::TimingViolation)"
---
Real-time timing violation
