crates/openracing-fmea/tests/snapshots/snapshot_expansion_tests__fault_type_usb_stall.snap
---
source: crates/openracing-fmea/tests/snapshot_expansion_tests.rs
expression: "format!(\"{}\", FaultType::UsbStall)"
---
USB communication stall
