crates/openracing-fmea/tests/snapshots/snapshot_expansion_tests__fmea_entry_overcurrent.snap
---
source: crates/openracing-fmea/tests/snapshot_expansion_tests.rs
expression: entry
---
FmeaEntry {
    fault_type: Overcurrent,
    detection_method: "Current sensor reading above safe threshold",
    action: SoftStop,
    max_response_time_ms: 10,
    post_mortem: PostMortemConfig {
        pre_fault_capture_duration: 2.0,
        post_fault_capture_duration: 1.0,
        include_telemetry: true,
        include_device_state: true,
        include_plugin_state: true,
    },
    recovery_procedure: "Immediate torque cutoff, check for hardware issues",
    enabled: true,
}
