crates/openracing-fmea/tests/snapshots/snapshot_expansion_tests__fmea_entry_plugin_overrun.snap
---
source: crates/openracing-fmea/tests/snapshot_expansion_tests.rs
expression: entry
---
FmeaEntry {
    fault_type: PluginOverrun,
    detection_method: "Plugin execution time exceeds budget",
    action: Quarantine,
    max_response_time_ms: 1,
    post_mortem: PostMortemConfig {
        pre_fault_capture_duration: 2.0,
        post_fault_capture_duration: 1.0,
        include_telemetry: true,
        include_device_state: true,
        include_plugin_state: true,
    },
    recovery_procedure: "Quarantine plugin, continue engine operation",
    enabled: true,
}
