crates/openracing-fmea/tests/snapshots/snapshot_expansion_tests__fmea_entry_usb_stall.snap
---
source: crates/openracing-fmea/tests/snapshot_expansion_tests.rs
expression: entry
---
FmeaEntry {
    fault_type: UsbStall,
    detection_method: "USB write timeout or consecutive failures",
    action: SoftStop,
    max_response_time_ms: 50,
    post_mortem: PostMortemConfig {
        pre_fault_capture_duration: 2.0,
        post_fault_capture_duration: 1.0,
        include_telemetry: true,
        include_device_state: true,
        include_plugin_state: true,
    },
    recovery_procedure: "Retry with exponential backoff, reconnect if needed",
    enabled: true,
}
